// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchNavigation should render the UI correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex font-bold focus:outline-none hover:bg-secondary-focus focus:ring-2 focus:ring-primary-color w-full"
      >
        <div
          class="flex flex-row align-top m-2 hover:bg-white w-full undefined"
        >
          <div
            class="flex flex-col flex-grow relative"
          >
            <div
              class="flex flex-row items-center input search-textfield-input input-focus "
            >
              <input
                class="body-1 search-textfield"
                name="search-Field"
                placeholder="Search for claims, documents, and more..."
                type="text"
                value="heal"
              />
              <div
                class="flex flex-col items-end"
              >
                <button
                  class="flex flex-col p-[0.125rem]  "
                  type="submit"
                >
                  <img
                    alt="Search"
                    class="icon searchhover "
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </button>
              </div>
            </div>
            <div
              class="searchSuggestion font-medium text-black scroll w-full"
            >
              <div
                class="flex flex-row searchForField title-3 px-4 py-2"
              >
                <p
                  class="body-1 px-2"
                  style="display: block;"
                >
                  See all results for 
                </p>
                <p
                  class="body-1 font-bold"
                  style="display: block;"
                >
                  heal
                </p>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div>
                <div>
                  <p
                    class="body-1 title-3 py-2 px-4"
                    style="display: block;"
                  >
                    Results
                  </p>
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/healthmanagementtoolkit/"
                    target="_blank"
                  >
                    <p>
                      <span>
                        BlueCross BlueShield of Tennessee - 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Library
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/healthymaternity/"
                    target="_blank"
                  >
                    <p>
                      <span>
                        BlueCross BlueShield of Tennessee - 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      thy Maternity
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/"
                    target="_blank"
                  >
                    <p>
                      <span>
                        BlueCross BlueShield of Tennessee - Managing Your 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="https://members.bcbst.com/wps/myportal/member/home/benefitscoverage/enrollhealthplan/"
                    target="_blank"
                  >
                    <p>
                      <span>
                        BlueCross BlueShield of Tennessee - Enroll in a 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Plan
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="https://members.bcbst.com/wps/myportal/member/home/findcare/comparehealthplans/"
                    target="_blank"
                  >
                    <p>
                      <span>
                        BlueCross BlueShield of Tennessee - Compare 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Plans
                    </p>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                  />
                </div>
                <div>
                  <p
                    class="body-1 title-3 py-2 px-4"
                    style="display: block;"
                  >
                    Names
                  </p>
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/profile/f1000037167/27002595527/%7B%22name%22:%22Accurate%20Healthcare%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <p>
                        <span>
                          Accurate 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        thcare Inc | 
                      </p>
                      <p
                        class="italic"
                      >
                        Durable Medical Equipment & Medical Supplies
                      </p>
                    </span>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/profile/f1000048623/27000337527/%7B%22name%22:%22Mental%20Health%20Cooperative%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <p>
                        <span>
                          Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        th Cooperative Inc | 
                      </p>
                      <p
                        class="italic"
                      >
                        <span>
                          Adult Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        th Clinic/Center
                      </p>
                    </span>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/profile/f1000048863/27000304027/%7B%22name%22:%22Mental%20Health%20Cooperative%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <p>
                        <span>
                          Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        th Cooperative Inc | 
                      </p>
                      <p
                        class="italic"
                      >
                        Psychiatric Hospital
                      </p>
                    </span>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/profile/f1000060250/27000365427/%7B%22name%22:%22Tennessee%20Mental%20Health%20Consumers%20Association%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <p>
                        <span>
                          Tennessee Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        th Consumers Association | 
                      </p>
                      <p
                        class="italic"
                      >
                        <span>
                          Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        <span>
                          th Clinic/Center (Including Community Mental 
                        </span>
                        <span>
                          <span
                            class="font-bold "
                          >
                            Heal
                          </span>
                        </span>
                        th Center)
                      </p>
                    </span>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                  />
                </div>
                <div>
                  <p
                    class="body-1 title-3 py-2 px-4"
                    style="display: block;"
                  >
                    Specialties
                  </p>
                  <div
                    class=""
                    style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                  />
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/search/search_specialties/270005100/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <p>
                      Hearing Aid Dispensers
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/search/search_specialties/270005099/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <p>
                      <span />
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Department
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/search/search_specialties/270005023/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <p>
                      <span>
                        Behavioral 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Facility
                    </p>
                  </a>
                  <a
                    class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                    href="/search/search_specialties/270005105/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                  >
                    <p>
                      <span>
                        Home 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Agency
                    </p>
                  </a>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
          />
          <div
            class="flex flex-col"
          >
            <span
              style="display: block; width: 1px; min-width: 1px; height: 14px; min-height: 14px;"
            />
            <img
              alt="CloseIcon"
              class=""
              data-nimg="1"
              decoding="async"
              height="12"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
              style="color: transparent;"
              width="12"
            />
          </div>
          <span
            style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex font-bold focus:outline-none hover:bg-secondary-focus focus:ring-2 focus:ring-primary-color w-full"
    >
      <div
        class="flex flex-row align-top m-2 hover:bg-white w-full undefined"
      >
        <div
          class="flex flex-col flex-grow relative"
        >
          <div
            class="flex flex-row items-center input search-textfield-input input-focus "
          >
            <input
              class="body-1 search-textfield"
              name="search-Field"
              placeholder="Search for claims, documents, and more..."
              type="text"
              value="heal"
            />
            <div
              class="flex flex-col items-end"
            >
              <button
                class="flex flex-col p-[0.125rem]  "
                type="submit"
              >
                <img
                  alt="Search"
                  class="icon searchhover "
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </button>
            </div>
          </div>
          <div
            class="searchSuggestion font-medium text-black scroll w-full"
          >
            <div
              class="flex flex-row searchForField title-3 px-4 py-2"
            >
              <p
                class="body-1 px-2"
                style="display: block;"
              >
                See all results for 
              </p>
              <p
                class="body-1 font-bold"
                style="display: block;"
              >
                heal
              </p>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div>
              <div>
                <p
                  class="body-1 title-3 py-2 px-4"
                  style="display: block;"
                >
                  Results
                </p>
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/healthmanagementtoolkit/"
                  target="_blank"
                >
                  <p>
                    <span>
                      BlueCross BlueShield of Tennessee - 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Library
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/healthymaternity/"
                  target="_blank"
                >
                  <p>
                    <span>
                      BlueCross BlueShield of Tennessee - 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    thy Maternity
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="https://members.bcbst.com/wps/myportal/member/home/managingyourhealth/"
                  target="_blank"
                >
                  <p>
                    <span>
                      BlueCross BlueShield of Tennessee - Managing Your 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="https://members.bcbst.com/wps/myportal/member/home/benefitscoverage/enrollhealthplan/"
                  target="_blank"
                >
                  <p>
                    <span>
                      BlueCross BlueShield of Tennessee - Enroll in a 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Plan
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="https://members.bcbst.com/wps/myportal/member/home/findcare/comparehealthplans/"
                  target="_blank"
                >
                  <p>
                    <span>
                      BlueCross BlueShield of Tennessee - Compare 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Plans
                  </p>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                />
              </div>
              <div>
                <p
                  class="body-1 title-3 py-2 px-4"
                  style="display: block;"
                >
                  Names
                </p>
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/profile/f1000037167/27002595527/%7B%22name%22:%22Accurate%20Healthcare%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <p>
                      <span>
                        Accurate 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      thcare Inc | 
                    </p>
                    <p
                      class="italic"
                    >
                      Durable Medical Equipment & Medical Supplies
                    </p>
                  </span>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/profile/f1000048623/27000337527/%7B%22name%22:%22Mental%20Health%20Cooperative%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <p>
                      <span>
                        Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Cooperative Inc | 
                    </p>
                    <p
                      class="italic"
                    >
                      <span>
                        Adult Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Clinic/Center
                    </p>
                  </span>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/profile/f1000048863/27000304027/%7B%22name%22:%22Mental%20Health%20Cooperative%20Inc%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <p>
                      <span>
                        Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Cooperative Inc | 
                    </p>
                    <p
                      class="italic"
                    >
                      Psychiatric Hospital
                    </p>
                  </span>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/profile/f1000060250/27000365427/%7B%22name%22:%22Tennessee%20Mental%20Health%20Consumers%20Association%22,%22client_canonical_id%22:null%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <span
                    class="rich-text body-1 undefined"
                  >
                    <p>
                      <span>
                        Tennessee Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Consumers Association | 
                    </p>
                    <p
                      class="italic"
                    >
                      <span>
                        Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      <span>
                        th Clinic/Center (Including Community Mental 
                      </span>
                      <span>
                        <span
                          class="font-bold "
                        >
                          Heal
                        </span>
                      </span>
                      th Center)
                    </p>
                  </span>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                />
              </div>
              <div>
                <p
                  class="body-1 title-3 py-2 px-4"
                  style="display: block;"
                >
                  Specialties
                </p>
                <div
                  class=""
                  style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                />
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/search/search_specialties/270005100/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <p>
                    Hearing Aid Dispensers
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/search/search_specialties/270005099/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <p>
                    <span />
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Department
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/search/search_specialties/270005023/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <p>
                    <span>
                      Behavioral 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Facility
                  </p>
                </a>
                <a
                  class="body-1 py-2 px-4 cursor-pointer hover:bg-tertiary-5 block"
                  href="/search/search_specialties/270005105/1/%7B"limit":10,"radius":"25","sort":"has_sntx%20desc,%20distance%20asc","sort_translation":"app_global_sort_distance"%7D?network_id=39&geo_location=36.1816,-86.7306&locale=en_us&ci=DFT"
                >
                  <p>
                    <span>
                      Home 
                    </span>
                    <span>
                      <span
                        class="font-bold "
                      >
                        Heal
                      </span>
                    </span>
                    th Agency
                  </p>
                </a>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                />
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
        />
        <div
          class="flex flex-col"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 14px; min-height: 14px;"
          />
          <img
            alt="CloseIcon"
            class=""
            data-nimg="1"
            decoding="async"
            height="12"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
            style="color: transparent;"
            width="12"
          />
        </div>
        <span
          style="display: block; width: 8px; min-width: 8px; height: 1px; min-height: 1px;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchNavigation should render the UI correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex font-bold focus:outline-none hover:bg-secondary-focus focus:ring-2 focus:ring-primary-color w-fit"
      >
        <div
          class="flex flex-row align-top"
        >
          <div
            class="flex flex-row rounded-[4px] m-4 box-border items-end focus:outline-none focus:ring-2 focus:ring-primary-color"
            tabindex="0"
          >
            <a>
              <p
                class="body-1 link-row-head"
                style="display: block;"
              >
                Search
              </p>
            </a>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
            />
            <img
              alt="Search"
              class="icon items-end ml-1"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
              style="color: transparent;"
              width="40"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex font-bold focus:outline-none hover:bg-secondary-focus focus:ring-2 focus:ring-primary-color w-fit"
    >
      <div
        class="flex flex-row align-top"
      >
        <div
          class="flex flex-row rounded-[4px] m-4 box-border items-end focus:outline-none focus:ring-2 focus:ring-primary-color"
          tabindex="0"
        >
          <a>
            <p
              class="body-1 link-row-head"
              style="display: block;"
            >
              Search
            </p>
          </a>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
          />
          <img
            alt="Search"
            class="icon items-end ml-1"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
